--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,21 +14,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MedQuery"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".RecordScreen"
+            android:name=".RegisterUserActivity"
             android:exported="false"
-            android:label="@string/title_activity_record_screen"
-            android:theme="@style/Theme.MedQuery" />
-        <activity
-            android:name=".ConversationActivity"
-            android:exported="false"
-            android:label="@string/title_activity_conversation"
+            android:label="@string/title_activity_register_user"
             android:theme="@style/Theme.MedQuery" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_record_screen"
             android:theme="@style/Theme.MedQuery">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,6 +32,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ConversationActivity"
+            android:exported="false"
+            android:label="@string/title_activity_conversation"
+            android:theme="@style/Theme.MedQuery" />
+        <activity
+            android:name=".RecordActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MedQuery"></activity>
     </application>
 
 </manifest>
