--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".DoctorPrescriptionActivity"
+            android:exported="false"
+            android:label="@string/title_activity_doctor_prescription"
+            android:theme="@style/Theme.MedQuery" />
+        <activity
             android:name=".RegisterUserActivity"
             android:exported="false"
             android:label="@string/title_activity_register_user"
